--- a/index-meta.html
+++ b/index-meta.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>My Music Encoding Project</title>
+    <title>Nicholas Renier Film</title>
     <meta charset="utf-8">
     <meta name="description" content="My project">
     <meta name="author" content="Me">
