--- a/index-meta.html
+++ b/index-meta.html
@@ -15,7 +15,7 @@
 
     <div id="content">
       <!-- ADD YOUR HTML CONTENT HERE! -->
-      <h1>My project</h1>
+      <h1>Nicholas Renier Film</h1>
       <h2>Metadata</h2>
       <p id="meta"></p>
 
