--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="content">
       <!-- ADD YOUR HTML CONTENT HERE! -->
-      <h1>My project</h1>
+      <h1>Nicholas Renier Film Project</h1>
     </div>
 
     <!-- **** DO NO EDIT BELOW THIS LINE **** -->
