--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     		Please also scroll through and explore the six pieces of film music that constituted the
     		main body of this project. In each page, you will find information about the piece
     		along with all the relevant examples of analyses that were carried out using various
-    		types of software.</p>
+    		types of software. There will aslo be links to download and view all relevant
+    		material associated with the project including MuseScore files, encoded notation, images,
+    		raw data and much more.</p>
     		<a href="about.html">
     			<div id="box"><h2>About this Project</h2></div>
     		</a>
@@ -127,6 +129,8 @@
     				</table>
     			</div>
     		</a>
+    		<img src="images/travolta.gif" alt="Travolta" height="250">
+    		<p><u><a href="#top">Back to top?</a></u></p>
     	</div>
     </div>
   </body>
