--- a/index-meta.html
+++ b/index-meta.html
@@ -3,10 +3,10 @@
 
   <head>
     <title>Nicholas Renier Film</title>
+    <link rel="stylesheet" type="text/css" href="css/ogstyle.css" media="all"/>
     <meta charset="utf-8">
     <meta name="description" content="My project">
     <meta name="author" content="Me">
-    <link rel="stylesheet" href="css/style.css" media="all" />
     <script src="js/verovio-toolkit.js"></script>
     <script src="js/utils.js"></script>
   </head>
@@ -34,7 +34,7 @@
    <script src="js/index.js"></script>
     <script>
       var xhr = new XMLHttpRequest()
-      xhr.open('GET', 'data/Youre So Cool.mei') // <-- change this to the right file
+      xhr.open('GET', 'data/example.mei') // <-- change this to the right file
       xhr.send(null)
 
       /* Deal with the response */
@@ -45,6 +45,7 @@
           if (xhr.status === OK) {
             var parser = new DOMParser()
             var meiDoc = parser.parseFromString(xhr.responseText,"text/xml")
+            document.querySelector("#meta").innerHTML += "<a href=\"" + meiDoc.querySelector("[*|id='composer-authority-hans-zimmer']").getAttribute('authURI') +"\"><p>" + meiDoc.querySelector("[*|id='composer-authority-hans-zimmer']").textContent + "</p></a>
             /* If your element has an authURI attribute, copy the folloiwng line, being sure to replace the "MY-XML-ID" with your element's actual xml:id.
             document.querySelector("#meta").innerHTML += "<a href=\"" + meiDoc.querySelector("[*|id='MY-XML-ID']").getAttribute('authURI') +"\"><p>" + meiDoc.querySelector("[*|id='MY-XML-ID']").textContent + "</p></a>"
            */
