--- a/youre_so_cool.html
+++ b/youre_so_cool.html
@@ -27,9 +27,9 @@
     			</tr>
     		</table>
     		<div id="content">
-      			<!-- ADD YOUR HTML CONTENT HERE! -->
-				<h2>Metadata</h2>
-				<p>Frédéric Chopin, &ldquo;Etude in F Minor&rdquo;, Op. 10, No. 9</p>
+				<h4><u>Metadata</u></h4>
+				<br>
+				<p>Click the link below to view Hans Zimmer's filmo/discography</p>
       			<p id="meta"></p>
       		</div>
     		<div id="controls">
