--- a/youre_so_cool.html
+++ b/youre_so_cool.html
@@ -29,7 +29,7 @@
     		<div id="content">
 				<h4><u>Metadata</u></h4>
 				<br>
-				<p>Click the link below to view Hans Zimmer's filmo/discography</p>
+				<p>Click the link below to view Hans Zimmer's full filmo/discography</p>
       			<p id="meta"></p>
       		</div>
     		<div id="controls">
