--- a/youre_so_cool.html
+++ b/youre_so_cool.html
@@ -36,6 +36,7 @@
      			<button id="prev"> &lt; </button>
       			<button id="next"> &gt; </button>
    			</div>
+   			<h4><u>Verovio Render</u></h4>
    		 	<div id="score">
       		<!-- THIS IS WHERE THE SCORE GOES AUTOMATICALLY -->
     		</div>
